<resources>
    <string name="app_name">MuLauncher</string>
    <string name="Launcher_Title">Mutative Launcher</string>
    <string name="title_1">Personalization</string>
    <string name="description_1">One Device Multiple Users.Each User will see the apps, which he has access, can customize home screen and app drawer</string>
    <string name="title_2">Adapt with surrounding</string>
    <string name="description_2">Brightness will adjust according to light conditions, text will enhance depending on the user state,profiles of a user will be launched using current location or known surrounding</string>
    <string name="title_3">Quick Access</string>
    <string name="description_3">Apps used frequently will be present on finger tips</string>

    <string name="add_user">Add user</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="add_user_desc">The first user will be the administrator by default, and can add and manage other users</string>
    <string name="use_face_unlock">Use face unlock</string>
    <string name="use_fingerprint">Use fingerprint</string>
    <string name="welcome_comma">Welcome, %1$s</string>
    <string name="user">User</string>
    <string name="instructions">Place your fingertip on the Home Button for scanning fingerprint</string>
    <string name="instructionsFace">Adjust the phone to scan the face properly</string>
    <string name="settings">Settings</string>
    <string name="change_profile">Change Profile</string>
    <string name="location_management">Manage Location</string>
    <string name="title_activity_location">Map</string>

    <string name="mapbox_access_token">pk.eyJ1IjoicmFqZ2l0ZSIsImEiOiJjanM1cWpvaHEwZ3NyNDNvNWYzanBvaTZmIn0.XTtd22Qo6lk7J3OoOxVNuQ</string>
    <string name="add_geofence">Add geofence</string>
    <string name="location_permission_rationale">Access to location is required to setup geofences</string>
    <string name="geofence_not_available">Geofence not available</string>
    <string name="geofence_too_many_geofences">Too many geofences added</string>
    <string name="geofence_too_many_pending_intents">Too many pending geofence requests</string>
    <string name="unknown_geofence_error">Unknown geofence error</string>
    <string name="geofence_transition_notification_text">Geofence transition detected</string>
    <string name="geofence_transition_entered">Entered geofence</string>
    <string name="geofence_transition_exited">Exited geofence</string>
    <string name="unknown_geofence_transition">Unknown geofence transition</string>
    <string name="geofences_added">Geofence added</string>
    <string name="Unlock">Unlock</string>
    <string name="Username">Username</string>
    <string name="add_profile">Add Profile</string>
    <string name="configure_profile">Configure profile</string>
    <string name="profilename">Profile Name</string>
    <string name="setlocation">Set Location</string>
    <string name="done">Done</string>
    <string name="def">Default</string>
    <string name="manage_profiles">Manage profiles</string>
    <string name="default_profile">Set Default Profile</string>
    <string name="edit">Edit</string>
    <string name="swipe_to_unlock">Swipe to unlock</string>
    <string name="display_apps_as">Displaying apps as</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="profile_name_empty_error">Profile name cannot be empty</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_admin_credentials">Invalid admin credentials</string>
    <string name="no_apps_in_profile">No apps in profile</string>
    <string name="progress_msg">Fetching app categories…\nThis may take a while the first time</string>
    <string name="most_used_apps">Most used apps</string>
    <string name="most_used_apps_prompt">(Frequently used apps will show up here)</string>
    <string name="use_pattern_lock">Use pattern lock</string>
    <string name="use_credentials_to_unlock">Use credentials to unlock</string>
    <string name="use_pattern_to_unlock">Use pattern to unlock</string>
    <string name="switch_user">Switch user</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="select_manually">Select manually</string>
    <string name="deleted">Deleted</string>
    <string name="manage_users">Manage users</string>
    <string name="removed_user">Removed user</string>

    <string-array name="list_types">
        <item>List</item>
        <item>Grid</item>
    </string-array>

</resources>
