<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="16dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/manage_profiles"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="@string/manage_profiles"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <TextView
        android:id="@+id/add_profile"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="@string/add_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <TextView
        android:id="@+id/geofencing"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="@string/location_management"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

</LinearLayout>