<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.AddUserDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/configure_profile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/profilename" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_delete_black_24dp"
                android:tint="?attr/colorControlNormal"
                android:visibility="gone" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/appListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:fitsSystemWindows="false"
            android:requiresFadingEdge="vertical" />

        <Button
            android:id="@+id/manualSelectionButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_margin="24dp"
            android:text="@string/select_manually" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:src="@drawable/ic_arrow_forward_black_24dp" />

</android.support.design.widget.CoordinatorLayout>